<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Production_Phases" Id="{cc715f6d-65db-44a1-a6c0-ac9b249f9fc3}">
    <Declaration><![CDATA[TYPE ST_Production_Phases :
STRUCT
	bEnable					:BOOL;
	iType					:INT;  	//0-Feeding,1-Mixing,2-Discharging
	sDescription			:STRING;
	iEndPoint				:INT;    //0-Manual,1-Auto
	iPhaseTime				:ST_HMI_Time;
	iMixing					:INT; 	//0-OFF,1-ON/Forward,2-Interval,3-Backward,4-Alternate
	rMixingShaft_Speed		:REAL;
	iChopper				:INT;	//0-OFF,1-Slow,2-Fast
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>